# pdf_extracter

./: LICENSE  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/: pdf.py
