[tool.poetry]
name = "pdf-extracter"
version = "0.1.0"
description = "Package to manage pdf files"
authors = ["rgalindor"]
license = "MIT"
readme = "README.md"
packages = [{include = "pdf_extracter"}]

[tool.poetry.dependencies]
python = "^3.8"
PyPDF2 = "^3.0.1"
openai = "^0.27.6"
pandas = "^2.0.1"
spacy = "^3.5.2"
boto3 = "^1.26.133"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
